--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <h3 class="project__platform">Equipment Inquiry</h3>
                 </div>
                 <div class="projects">
-                    <a href="https://www.weareswitch.com.au/"><img src="/assets/switch.png" class="projects__image" alt=""></a>
+                    <a href="https://mjaneclinics.com.au/"><img src="/assets/mjane.png" class="projects__image" alt=""></a>
                     <p class="project__tools">WordPress Elementor</p>
                     <h3 class="project__platform">Services Booking</h3>
                 </div>
